# acid-vulkan

./: .gitignore  .gitmodules  Acid-Vulkan Progress Notes 2025.txt  CMakeLists.txt  LICENSE  main.cpp
dependencies/: CMakeLists.txt
shaders/: input_structures.glsl  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv  mesh_no_mat.frag  mesh_no_mat.frag.spv  mesh_no_mat.vert  mesh_no_mat.vert.spv
src/: element_traits_for_fastgltf.h  phVkCamera.hpp  phVkConfig.h  phVkConfig.hpp  phVkDescriptors.hpp  phVkEngine.hpp  phVkImages.hpp  phVkInitDefaults.h  phVkInitDefaults.hpp  phVkMaterial.hpp  phVkModel.hpp  phVkPipelines.hpp  phVkScene.hpp  phVkTypes.h  phVkTypes.hpp  phvk_camera.cpp  phvk_camera.h  phvk_descriptors.cpp  phvk_descriptors.h  phvk_engine.cpp  phvk_engine.h  phvk_images.cpp  phvk_images.h  phvk_initializers.cpp  phvk_initializers.h  phvk_loader.cpp  phvk_loader.h  phvk_pipelines.cpp  phvk_pipelines.h  phvk_types.h
testbench/: main.cpp
